[gd_scene load_steps=10 format=3 uid="uid://b0f7th7oe2n7s"]

[ext_resource type="Script" uid="uid://ionxorg8a4nf" path="res://scripts/LabelingPartsGame.gd" id="1_64o2u"]
[ext_resource type="Texture2D" uid="uid://ku38vdj43utj" path="res://Assets/Images/plants_bg.png" id="1_ubwiw"]
[ext_resource type="Texture2D" uid="uid://1mqgqvxtsv0u" path="res://Assets/Images/plant.png" id="2_64o2u"]
[ext_resource type="Texture2D" uid="uid://dsln7qtavnrs1" path="res://Assets/Images/label_parts_character.png" id="3_ptura"]
[ext_resource type="FontFile" uid="uid://cvrt0yq7n0qp7" path="res://Assets/Fonts/Chewy-Regular.ttf" id="4_cdogm"]
[ext_resource type="Texture2D" uid="uid://c2ksk818tcdmv" path="res://Assets/Images/EllieBubble1.png" id="5_36w6p"]
[ext_resource type="AudioStream" uid="uid://cd3s2nkeijomp" path="res://Assets/Audio/Background1.mp3" id="7_ptura"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.9, 0.95, 1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64o2u"]
bg_color = Color(0.8, 0.4, 0.2, 1)

[node name="LabelingPartsGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64o2u")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
position = Vector2(642.25, 359.5)
scale = Vector2(0.911577, 0.900253)
texture = ExtResource("1_ubwiw")

[node name="PlantSprite" type="Sprite2D" parent="."]
position = Vector2(761, 414)
scale = Vector2(0.356445, 0.316406)
texture = ExtResource("2_64o2u")

[node name="CharacterSprite" type="Sprite2D" parent="."]
position = Vector2(1102, 448)
scale = Vector2(0.29668, 0.309863)
texture = ExtResource("3_ptura")

[node name="InstructionPanel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="InstructionLabel" type="Label" parent="InstructionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_cdogm")
theme_override_font_sizes/font_size = 20
text = "Drag each word to the correct part of the plant!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="WordContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -150.0
offset_right = 219.0
offset_bottom = 219.0
grow_vertical = 2

[node name="RootBubble" type="Control" parent="WordContainer"]
custom_minimum_size = Vector2(140, 70)
anchors_preset = 0
offset_right = 140.0
offset_bottom = 70.0

[node name="BubbleSprite" type="Sprite2D" parent="WordContainer/RootBubble"]
position = Vector2(66, 32)
scale = Vector2(0.524528, 0.368895)
texture = ExtResource("5_36w6p")

[node name="WordLabel" type="Label" parent="WordContainer/RootBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "root"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputArea" type="ColorRect" parent="WordContainer/RootBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="StemBubble" type="Control" parent="WordContainer"]
custom_minimum_size = Vector2(140, 70)
anchors_preset = 0
offset_top = 90.0
offset_right = 140.0
offset_bottom = 160.0

[node name="BubbleSprite" type="Sprite2D" parent="WordContainer/StemBubble"]
position = Vector2(65.5, 36)
scale = Vector2(0.522642, 0.381748)
texture = ExtResource("5_36w6p")

[node name="WordLabel" type="Label" parent="WordContainer/StemBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "stem"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputArea" type="ColorRect" parent="WordContainer/StemBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="LeafBubble" type="Control" parent="WordContainer"]
custom_minimum_size = Vector2(140, 70)
anchors_preset = 0
offset_top = 180.0
offset_right = 140.0
offset_bottom = 250.0

[node name="BubbleSprite" type="Sprite2D" parent="WordContainer/LeafBubble"]
position = Vector2(63, 39.375)
scale = Vector2(0.543396, 0.419666)
texture = ExtResource("5_36w6p")

[node name="WordLabel" type="Label" parent="WordContainer/LeafBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "leaf"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputArea" type="ColorRect" parent="WordContainer/LeafBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="FlowerBubble" type="Control" parent="WordContainer"]
custom_minimum_size = Vector2(140, 70)
anchors_preset = 0
offset_top = 270.0
offset_right = 140.0
offset_bottom = 340.0

[node name="BubbleSprite" type="Sprite2D" parent="WordContainer/FlowerBubble"]
position = Vector2(64, 49)
scale = Vector2(0.554717, 0.431234)
texture = ExtResource("5_36w6p")

[node name="WordLabel" type="Label" parent="WordContainer/FlowerBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 20
text = "flower"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputArea" type="ColorRect" parent="WordContainer/FlowerBubble"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
max_value = 4.0
step = 1.0
show_percentage = false

[node name="ProgressLabel" type="Label" parent="ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -12.0
offset_right = 30.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "0/4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ptura")
volume_db = -25.0
autoplay = true

[node name="nav-buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 549.0
offset_right = 659.0
offset_bottom = 622.0

[node name="back-button" type="Button" parent="nav-buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_cdogm")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_64o2u")
text = "Back"

[node name="spacer" type="Control" parent="nav-buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="next-button" type="Button" parent="nav-buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_cdogm")
theme_override_font_sizes/font_size = 40
text = "Next"
